Move MaxMind settings to KC env + add option for e-mail subject prefix * make account settings of MaxMind avaliable via KC env variables instead of having to compile them in the plugin * possibility to add a prefix to the e-mail subject e.g. to add the service name

--- a/email-notifications/src/main/resources/email_content.properties
+++ b/email-notifications/src/main/resources/email_content.properties
@@ -1,4 +1,4 @@
-subject=Log-in from a new IP address
+subject=${subjectPrefix} Log-in from a new IP address
 textBody=Dear user ${username}, \nwe have detected a new sign-in to your account from an IP address that we don't recognize. \n\n  IP address: ${currentIP}, \n  from: ${location}, \n  agent: ${userAgent}. \n\nIf this was you, please disregard this email. \nIf this wasn't you, please take action immediately to secure your account. We recommend changing your password and enabling two-factor authentication. \nThank you
 htmlBody=<h1 style='font-size: 24px; color: #4c4c4c; font-family: Helvetica, sans-serif;'>New Sign-in from a New IP Address</h1>\
 <div style='font-size: 18px; font-family: Helvetica, sans-serif;'> \
