--- a/login-session-listener/pom.xml
+++ b/login-session-listener/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cz.mendelu.pef.xchyliko.keycloak.extensions</groupId>
         <artifactId>keycloak-extensions</artifactId>
-        <version>1.0.0.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>login-session-listener</artifactId>
