--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cz.mendelu.pef.xchyliko.keycloak.extensions</groupId>
     <artifactId>keycloak-extensions</artifactId>
-    <version>1.0.0.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>pom</packaging>
 
     <modules>
